Migrate to Gradle 5.0 and Java 11; Remove shit I don't need; Move bridge out into separate package again